<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.restaurant_page.screen.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/header_img" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_share"
                app:tint="@color/white" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_help"
                app:tint="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/restaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/gram_regular"
                android:text="@string/restaurant_name"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="normal" />

            <LinearLayout
                android:id="@+id/restaurantDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/restaurantName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="3dp"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gram_regular"
                    android:text="@string/restaurant_time"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/restaurantContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/restaurantDate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="3dp"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gram_regular"
                    android:text="@string/restaurant_contact"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/restaurantContact"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/text_color"
                android:fontFamily="@font/gram_regular"
                android:text="@string/book_a_table"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cartButton"
        android:layout_below="@+id/cardView"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gram_regular"
            android:text="@string/starter"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="normal" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/starterRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="5"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_starter"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cartButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/text_color"
        android:foreground="?selectableItemBackground"
        tools:targetApi="m">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_cart"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gram_regular"
                android:text="@string/view_cart"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/cart_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/gram_regular"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>